updating home page image

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     />
     <meta
       property="og:image"
-      content="logo192.png"
+      content="MainLandingPageHero.png"
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
