updated about page

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       content="ReCover is dedicated to helping addicts find the resources needed to help them live in recovery. It connects people struggling with addiction to Sponsors who are willing to help support them. Our main goal is to make Sponsors easily available, provide resources needed to assist people with addiction, and promote sober events in our communities."
     />
     <meta name="twitter:image"
-    content="logo192.png" />
+    content="MainLandingPageHero.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
